--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-json'
     implementation 'org.apache.poi:poi-ooxml:5.3.0'
+
+    // s3
+    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.118'
 }
 
 tasks.named('test') {
