--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ repositories {
 }
 
 dependencies {
+    //elasticsearch
+    implementation 'org.elasticsearch.client:elasticsearch-rest-high-level-client:7.15.2'
+
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.33'
     implementation 'org.jsoup:jsoup:1.14.3'
