--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.1'
+
+    // Metadata Extractor
+    implementation 'com.drewnoakes:metadata-extractor:2.16.0'
 }
 
 tasks.named('test') {
